# Multibot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: bot_1_amcl.yaml  bot_1_btnavigator.yaml  bot_1_controller.yaml  bot_1_planner_server.yaml  bot_1_recovery.yaml  bot_1_waypoints.yaml  bot_2_amcl.yaml  bot_2_btnavigator.yaml  bot_2_controller.yaml  bot_2_planner_server.yaml  bot_2_recovery.yaml  bot_3_amcl.yaml  bot_3_behavior.xml  bot_3_btnavigator.yaml  bot_3_controller.yaml  bot_3_planner_server.yaml  bot_3_recovery.yaml  mapper.yaml
launch/: localization.launch.py  mapping.launch.py  navigation.xml  pathplanning.launch.py  spawn_desc.launch.py  spawn_robots.launch.py  spawn_robots.launch.xml  square_desc.launch.py  square_robots.launch.xml  world.launch.py
maps/: multibot_map.pgm  multibot_map.yaml
meshes/sensors/: realsense.dae  rplidar.dae
patterns/: circle.py  follow_the_leader.py  followtheleader.py  nav.py  note.ipynb  square.py
rviz/: follow_leader.rviz  ftl.rviz  localisation.rviz  mapper.rviz  nav.rviz
urdf/: bot_1.urdf  bot_2.urdf  bot_3.urdf
worlds/: empty.world  space.world
